--- a/app/views/classrooms/show.html.erb
+++ b/app/views/classrooms/show.html.erb
@@ -15,15 +15,15 @@
             	</address>
             	<address>
 			    	<strong>Number Of School Admins:</strong>
-			    	<%= @role_wise_count[0].blank? ? 0 : @role_wise_count[0] %>
+			    	<%#= @role_wise_count[0].blank? ? 0 : @role_wise_count[0] %>
             	</address>
             	<address>
 			    	<strong>Number Of Teachers:</strong>
-			    	<%= @role_wise_count[1].blank? ? 0 : @role_wise_count[1] %>
+			    	<%#= @role_wise_count[1].blank? ? 0 : @role_wise_count[1] %>
             	</address>
             	<address>
 			    	<strong>Number Of Students:</strong>
-			    	<%= @role_wise_count[2].blank? ? 0 : @role_wise_count[2] %>
+			    	<%#= @role_wise_count[2].blank? ? 0 : @role_wise_count[2] %>
             	</address>
             	<address>
 			    	<strong>School Start Year:</strong>
