--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,27 +39,34 @@
       <ul class="nav nav-pills nav-stacked nav-bracket page-sidebar id="main-menu"" data-no-turbolink>
 		<li id="li_dashboard"><%= link_to '<i class="fa fa-home"></i>'.html_safe + "Dashboard", root_path %></li>
 		 <span class="arrow arrw-pos" container_li="li_dashboard"></span>
+		
+		
 		<li class="nav-parent" id="li_school"><a href=""><i class="glyphicon glyphicon-book"></i> <span>School</span></a>
 			<span class="arrow arrw-pos" container_li="li_school"></span>
           <ul class="children">
-		      <%#= if can? :create, School %> 
+		      <% if can? :create, :schools %>
 			      <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Add School", new_school_path %></li>
-			  <%#=end%>
-			  <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "School List", schools_path %></li>
+			  <%end%>
+			  <% if can? :read, :schools %>
+			      <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "School List", schools_path %></li>
+			 <%end%>
          </ul>
         </li>
 		
-		<%#= if current_user.is_web_admin? %>
 		<li class="nav-parent" id="li_webadmin"><%= link_to '<i class="glyphicon glyphicon-user"></i>'.html_safe + "Web Admin", root_path %>
 			<span class="arrow arrw-pos" container_li="li_webadmin"></span>
           <ul class="children">
+			 <% if can? :create, :users %> 
              <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Add Web Admin", new_user_path(:role_id =>Role.where("name='Web Admin'").last) %></li>
-            <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Web Admin Listing", users_path(:role_id => Role.where("name='Web Admin'").last) %></li>
-            <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Add Book", new_book_path %></li>
+			 <%end%> 
+			 <% if can? :read, :users %> 
+             <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Web Admin Listing", users_path(:role_id => Role.where("name='Web Admin'").last) %></li>
+			 <%end%>
+             <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Add Book", new_book_path %></li>
           </ul>
         </li>
-		<%#=end%>
-		<%#= if current_user.is_web_admin?%>
+		
+		<% if current_user.is_web_admin?%>
 		<li class="nav-parent" id="li_accessright"><a href=""><i class="glyphicon glyphicon-ban-circle"></i> <span>Access Rights</span></a>
 			<span class="arrow arrw-pos" container_li="li_accessright"></span>
           <ul class="children">
@@ -67,7 +74,7 @@
             <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Access Right List", accessrights_path %></li>
           </ul>
         </li>
-		<%#=end%>
+		<%end%>
       </ul>
     </div>
   </div>
