--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -1,5 +1,5 @@
 
-<%#= form_tag 'schools/delete_school', remote: true do %>
+<%= form_tag 'schools/delete_school' do %>
 <div class="panel panel-default">
 	<div class="panel-body"> 
 		<div class="index_page_btns" data-no-turbolink>
@@ -7,8 +7,8 @@
 			<%=link_to 'Download Sample',"", :class=>"btn btn-success btn-xs download_sample", :"data-toggle" => "modal", :"data-target" => "#download_list_modal" %>
 			
 			<% if can? :create, School %> <%=link_to 'Add School', new_school_path, :class=>"btn btn-success btn-xs"%> <%end%>
-			<%=link_to 'Renew', new_school_path, :class=>"btn btn-success btn-xs"%>
-			<%=submit_tag 'Delete', :class=>"btn btn-success btn-xs delete-school-list", :id=>'delete_school',:disabled => true, data: { confirm: 'Are you sure?' } %>
+			<%#=link_to 'Renew', new_school_path, :class=>"btn btn-success btn-xs"%>
+			<%=submit_tag 'Delete', :class=>"btn btn-success btn-xs ", :id=>'delete_school', :disabled => true, data: { confirm: 'Are you sure?' } %>
 		</div>
 		 
 		<div class="table-responsive">
@@ -63,7 +63,7 @@
 		</div>	
 	</div>	
 </div>	  
-<%#= end %>		  
+<% end %>		  
 
 
 <div class="modal fade" id="school_license_details" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -81,7 +81,7 @@
 </div>	
 
 <div class="modal fade" id="download_list_modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
+  <div class="modal-dialog" style="width:800px;">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
