Addedd breadcrumbs and solved change pass/assign license problem

--- a/app/views/breadcrumb/_breadcrumb.html.erb
+++ b/app/views/breadcrumb/_breadcrumb.html.erb
@@ -10,10 +10,10 @@
 
   <% if !breadcrumbError then %>
   <div class="pageheader">
-   <h2><i class="fa fa-table"></i> <%= @breadcrumb[:title] %></h2>
+   <h2><i class="<%= @breadcrumb[:icon]%>"></i> <%= @breadcrumb[:title] %></h2>
    <div class="breadcrumb-wrapper">
      <span class="label">You are here:</span>
-     <ol class="breadcrumb">
+     <ol class="breadcrumb" data-no-turbolink>
         <% @breadcrumb[:breadcrumb].each_with_index do |(page, link), index|  %>
           <% if index == @breadcrumb[:breadcrumb].size - 1 %>   
             <li class="active"><%=page%></li>
