--- a/app/views/licenses/destroy.js.erb
+++ b/app/views/licenses/destroy.js.erb
@@ -6,7 +6,7 @@ $('#datepicker').val('');
 
 <% @license = License.new  %>
 
-$('#id_archive_license').removeClass('hide').addClass('show');
-$('#id_update_license').removeClass('show').addClass('hide');
-$('#id_create_license').removeClass('show').addClass('hide');
+// $('#id_archive_license').removeClass('hide').addClass('show');
+// $('#id_update_license').removeClass('show').addClass('hide');
+// $('#id_create_license').removeClass('show').addClass('hide');
 
