--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -26,7 +26,7 @@
 	                </tr>
 	            </thead>
 	            <tbody>
-					<% @schools.each do |school| %>
+					<% @schools.try(:each) do |school| %>
 		                <tr class="odd gradeX">
 		                  <td class=""><%= check_box_tag 'school_ids[]', school.id, false, :class => "school-check-box" %></td>	
 		                  <td class=""><%= school.code %></td>
@@ -71,7 +71,7 @@
 		</div>
 
 		<div data-no-turbolink>
-			<%= paginate @schools %>
+			<%#= paginate @schools %>
 		</div>	
 	</div>	
 </div>	  
