--- a/app/views/users/_assign_license.html.erb
+++ b/app/views/users/_assign_license.html.erb
@@ -1,8 +1,8 @@
 <div class="row">
 	<div class="col-md-12">
 	    <div class="panel panel-default">
-	       <div class="panel-body">
-			   <%= form_for @user, :html=>{:class=>"form_validation"} do |f| %>
+	       <%= form_for @user, :html=>{:class=>"form_validation"} do |f| %>
+		   <div class="panel-body">
 			   <%= hidden_field_tag :send_mail, @no_mail%>
 			       <div class="row">
 		               <div class="col-sm-6">
@@ -15,7 +15,7 @@
 		           </div>
 			</div>
 	        <div class="panel-footer" data-no-turbolink>
-	            <%= f.submit "Save", class: "btn btn-primary btn-xs", data: { disable_with: 'Saving...' }%>
+	            <%= f.submit "Save", class: "btn btn-primary btn-xs"%>
 				<button type="button" class="btn btn-default btn-xs" data-dismiss="modal">Close</button>
 	        </div>
 			<% end %>
