--- a/app/views/users/_change_password.html.erb
+++ b/app/views/users/_change_password.html.erb
@@ -1,9 +1,9 @@
 <div class="row">
 	<div class="col-md-12">
 	    <div class="panel panel-default">
-	       <div class="panel-body">
-	        	<%= form_for @user, :html=>{:class=>"form_validation"} do |f| %>
-				    <div class="row">
+			<%= form_for @user, :html=>{:class=>"form_validation"} do |f| %>
+	            <div class="panel-body">
+	        	    <div class="row">
 		                <div class="col-sm-6">
 		                    <div class="form-group">
 			   			    	<%= f.label :first_name, :class=>"control-label"%>
@@ -32,13 +32,11 @@
 		                </div>
 		            </div>
 			</div>
-	        <div class="panel-footer" data-no-turbolink>
-	            <%= submit_tag "Save", class: "btn btn-primary btn-xs", data: { disable_with: 'Saving...' }%>
+	        <div>
+	            <%= f.submit "Save", class: "btn btn-primary btn-xs"%>
 				<button type="button" class="btn btn-default btn-xs" data-dismiss="modal">Close</button>
 	        </div>
 			<% end %>
 	    </div>
     </div>       
 </div>
-
-	
