added logo image

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
   <div class="leftpanel">
     <div class="logopanel">
         <h1><span></span> Books That Grow <span></span></h1>
+		<%#= image_tag("app_icon.png")%>
     </div>
     <div class="leftpanelinner">
         <div class="visible-xs hidden-sm hidden-md hidden-lg">   
@@ -80,7 +81,7 @@
   </div>
   <div class="mainpanel">
     <div class="headerbar">
-      <a class="menutoggle"><i class="fa fa-bars"></i></a>
+      <!-- <a class="menutoggle"><i class="fa fa-bars"></i></a> -->
       <div class="header-right">
         <ul class="headermenu">
           <li>
