--- a/app/views/users/forgot_password.html.erb
+++ b/app/views/users/forgot_password.html.erb
@@ -4,7 +4,8 @@
     <% end %>
     <div class="signin-info">
         <div class="logopanel">
-            <h1><span>[</span> Books That Grow<span>]</span></h1>
+            <!-- <h1><span>[</span> Books That Grow<span>]</span></h1> -->
+			<%= image_tag("app_icon.png", :class=>"logo_image")%>
         </div>
 		<div class="mb20"></div>
             <h5><strong>Welcome to Books That Grow Admin Portal!</strong></h5>
