--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -1,4 +1,7 @@
-
+<style>
+	table td {border:solid 1px #fab; width:100px; word-wrap:break-word;}
+	a, button {margin:2px;}
+</style>
 <%= form_tag 'schools/delete_school' do %>
 <div class="panel panel-default">
 	<div class="panel-body"> 
@@ -7,7 +10,7 @@
 			<%=link_to 'Download Sample',"", :class=>"btn btn-success btn-xs download_sample", :"data-toggle" => "modal", :"data-target" => "#download_list_modal" %>
 			
 			<% if can? :create, :schools %> <%=link_to 'Add School', new_school_path, :class=>"btn btn-success btn-xs"%> <%end%>
-			<%=link_to 'Renew', new_school_path, :class=>"btn btn-success btn-xs"%>
+			<%#=link_to 'Renew', new_school_path, :class=>"btn btn-success btn-xs"%>
 			<%=submit_tag 'Delete', :class=>"btn btn-success btn-xs delete-school-list", :id=>'delete_school',:disabled => true, data: { confirm: 'Are you sure?' } %>
 		</div>
 		 
@@ -15,7 +18,7 @@
 			<table class="table" id="school_table">
 	            <thead>
 	                <tr>
-	                	<th><%= check_box_tag 'school_id[]', '', false, :class => "select-all-school" %></th>
+	                	<th>Remove all &nbsp; <%= check_box_tag 'school_id[]', '', false, :class => "select-all-school" %></th>
 	                    <th>School Code</th>
 	                    <th>School Name</th>
 	                    <th>District</th>
