added username in form and removed index on email

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,8 +17,7 @@
 <section>
   <div class="leftpanel">
     <div class="logopanel">
-        <h1><span></span> Books That Grow <span></span></h1>
-		<%#= image_tag("app_icon.png")%>
+		<h3 style="margin:0"> <%= image_tag("logo.png")%> Books That Grow </h3>
     </div>
     <div class="leftpanelinner">
         <div class="visible-xs hidden-sm hidden-md hidden-lg">   
