--- a/app/views/users/_common_fields.html.erb
+++ b/app/views/users/_common_fields.html.erb
@@ -15,10 +15,18 @@
 	            <div class="row">
 	                <div class="col-sm-3">
 	                    <div class="form-group">
-	                    	<%= f.label :phone_number, "Phone Number", :class=>"control-label" %>
+	                    	<%= f.label :username, "Username", :class=>"control-label" %><span class="asterisk">*</span>
+		    			    <%= f.text_field :username, :class=>"form-control" %>
+	                    </div>
+	                </div>
+	                <div class="col-sm-3">
+	                    <div class="form-group">
+	                    	<%= f.label :phone_number, "", :class=>"control-label" %>
 		    			    <%= f.text_field :phone_number, :class=>"form-control" %>
 	                    </div>
 	                </div>
+				</div>	
+				<div class="row">	
 	                <div class="col-sm-6">
 	                    <div class="form-group">
 		   			    	<%= f.label :email, :class=>"control-label"%><span class="asterisk">*</span>
