--- a/app/views/users/_common_fields.html.erb
+++ b/app/views/users/_common_fields.html.erb
@@ -65,13 +65,11 @@
 			    <%end%>
 				<% if @role_id.name.eql?('Student')%>
 				
-				
 	        	    <%=f.fields_for :parents,@parent do |fb|%>     
 	        		    <%=render 'parent_fields', f: fb%>
 	        	    <%end%>
 				    <%= link_to_add_fields "Add More Parent Details", f, :parents %>
-			   
-				
+			   	
 				<div class="row">
 	            	<div class="col-sm-3">
 	                	<div class="form-group">
@@ -94,6 +92,23 @@
 				        </div>
 				    </div>
 				</div>
+                 <div class="row">
+                    <div class="col-md-6">
+					   <table class="">
+			   			    <tr>
+			   				    <td>
+			   					    <div class="student-img"><%image = ( ["edit", "update"].include?(action_name)) ? (f.photos.blank? ? "missin.png" : f.photos.url) : 'missin.png'  %>
+			   					    <%= image_tag(image,:alt=>"your image",:class=>"",:border=>"1") %></div>
+			   				    </td>
+			   			    </tr>
+			   			    <tr>
+			   				    <td>
+			   					    <%= f.file_field :photos%>
+			   				    </td>
+			   			    </tr>
+			   		    </table>
+                    </div> 
+                </div>
 				<% end %>
 				<% if @role_id.name.eql?('Teacher')%>
 				    <div class="row">
