Added functionality for userlevel setting

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,8 +37,8 @@
         </div>
       <h5 class="sidebartitle">    </h5>
       <ul class="nav nav-pills nav-stacked nav-bracket page-sidebar" id="main-menu" data-no-turbolink>
-		<li id="li_dashboard"><%= link_to '<i class="fa fa-home"></i>'.html_safe + "Dashboard", root_path %></li>
-		 <span class="arrow arrw-pos" container_li="li_dashboard"></span>
+		<!-- <li id="li_dashboard"><%= link_to '<i class="fa fa-home"></i>'.html_safe + "Dashboard", root_path %></li> -->
+		 <!-- <span class="arrow arrw-pos" container_li="li_dashboard"></span> -->
 		
 		
 		<li class="nav-parent" id="li_school"><a href=""><i class="glyphicon glyphicon-book"></i> <span>School</span></a>
