--- a/app/views/users/delete_user.js.erb
+++ b/app/views/users/delete_user.js.erb
@@ -1,3 +1,4 @@
 window.location.reload();
+$('.select-all-user').prop("checked", false);
 $('.user-check-box').prop("checked", false);
 document.getElementById("delete_user").disabled=true; 
