--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -13,6 +13,10 @@
   margin-left: 20px;
 }
 
+table td {border:solid 1px #fab; width:100px; word-wrap:break-word;}
+a, button {margin:2px;}
+
+.fa-lock.increase_size{font-size:20px;}
 .logo_image{width:80px; height:80px;}
 
 .student-img {border-radius:128px; height:128px; width:128px; position:relative; overflow:hidden; box-shadow:inset 0 0 1px #a1a1a1;}
