added new icon for remove license

--- a/app/assets/stylesheets/btg_icon_font.css
+++ b/app/assets/stylesheets/btg_icon_font.css
@@ -88,3 +88,9 @@
   font-size:24px;
   vertical-align: middle;
 }
+.btg-lisence-cancel:before {
+  content: "j";
+  font-size:22px;
+  vertical-align: middle;
+}
+
