Removed css applied to tables

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -13,8 +13,8 @@
   margin-left: 20px;
 }
 
-table td {border:solid 1px #fab; width:100px; word-wrap:break-word;}
-a, button {margin:2px;}
+//table td {border:solid 1px #fab; width:100px; word-wrap:break-word;}
+//a, button {margin:2px;}
 
 .fa-lock.increase_size{font-size:20px;}
 .logo_image{width:80px; height:80px;}
