Book and book image upload done

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -37,6 +37,9 @@
 	        	</tbody>
 	    	</table>
 		</div>
+		<div data-no-turbolink>
+		    <%= paginate @books %>
+		</div>
 	</div>
 </div>		  
 <%#= end %>		  
