--- a/app/views/books/_preview_book_image_fields.html.erb
+++ b/app/views/books/_preview_book_image_fields.html.erb
@@ -2,7 +2,7 @@
 	<div class="form-row form-group">
 		<div class="row">
     		<div class="col-md-12">
-	    		<%= f.file_field :preview_book_image, :class=>"form-control"%>
+	    		<%= f.file_field :preview_image, :class=>"form-control"%>
 				<%#=f.hidden_field :_destroy%>
 				<%=link_to "Remove", '#', :class => 'remove_fields'%>
  			</div>
