--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -6,15 +6,14 @@
 			<%=link_to 'Download Sample',"", :class=>"btn btn-success btn-xs download_sample", :"data-toggle" => "modal", :"data-target" => "#download_list_modal" %>
 			
 			<% if can? :create, :schools %> <%=link_to 'Add School', new_school_path, :class=>"btn btn-success btn-xs"%> <%end%>
-			<%#=link_to 'Renew', new_school_path, :class=>"btn btn-success btn-xs"%>
-			<%=submit_tag 'Delete', :class=>"btn btn-success btn-xs delete-school-list", :id=>'delete_school',:disabled => true, data: { confirm: 'Are you sure?' } %>
+			<%=submit_tag 'Delete', :class=>"btn btn-success btn-xs delete-school-list", :id=>'delete_element',:disabled => true, data: { confirm: 'Are you sure?' } %>
 		</div>
 		 
 		<div class="table-responsive">
-			<table class="table" id="school_table">
+			<table class="table class_common_table" id="school_table">
 	            <thead>
 	                <tr>
-	                	<th>Remove all &nbsp; <%= check_box_tag 'school_id[]', '', false, :class => "select-all-school" %></th>
+	                	<th>Remove all &nbsp; <%= check_box_tag 'school_id[]', '', false, :class => "all-school" %></th>
 	                    <th>School Code</th>
 	                    <th>School Name</th>
 	                    <th>District</th>
@@ -25,9 +24,9 @@
 	                </tr>
 	            </thead>
 	            <tbody>
-					<% @schools.try(:each) do |school| %>
+					<% @schools.each do |school| %>
 		                <tr class="odd gradeX">
-		                  <td class=""><%= check_box_tag 'school_ids[]', school.id, false, :class => "school-check-box" %></td>	
+		                  <td class=""><%= check_box_tag 'school_ids[]', school.id, false, :class => "check-box" %></td>	
 		                  <td class=""><%= school.code %></td>
 		                  <td class=""><%= school.name %></td>
 		                  <td class=""><%= school.district %></td>
@@ -44,7 +43,6 @@
 							<% if can? :create, :licenses %> 
 							   <%= link_to '<i title="Add License" class="btg btg-lisence"></i>'.html_safe, new_license_path(:school_id=>school)%> 
 							<%end%>
-							<%#= link_to '<i title="School Admin List" class="glyphicon glyphicon-tag"></i>'.html_safe, users_path(:school_id=>school, :role_id=>2)%> 
 							<% if can? :read, :users %>
 							    <%=link_to '<i title="School Admin List" class="btg btg-admin"></i>'.html_safe, users_path(:school_id=>school, :role_id=>@school_admin.id)%> 
 							<%end%>
