--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag 'users/delete_user', remote: true do %>
+<%#= form_tag 'users/delete_user' do %>
   <div class="panel panel-default">
 	<div class="panel-body"> 
 	  <div class="index_page_btns" data-no-turbolink>
@@ -25,13 +25,13 @@
 			<%=link_to 'Import Student List', import_list_users_path(:list_type => "student"), :class=>"btn btn-success btn-xs"%>
 			<%=link_to 'Download Sample', "", :class=>"btn btn-success btn-xs download_sample", :'data-list_type' => "student", :"data-toggle" => "modal", :"data-target" => "#download_list_modal"  %>
 		<%end%>
-		<%=submit_tag 'Delete', :class=>"btn btn-success btn-xs delete-user-list", :id=>'delete_user',:disabled => true, data: { confirm: 'Are you sure?' }%>
+		<%#=submit_tag 'Delete', :class=>"btn btn-success btn-xs delete-user-list", :id=>'delete_element',:disabled => true, data: { confirm: 'Are you sure?' }%>
 	</div>
 	<div class="table-responsive">
-		<table class="table" id="users_table">
+		<table class="table class_common_table" id="users_table">
             <thead>
                 <tr>
-                	<th>Remove all &nbsp; <%= check_box_tag 'user_id[]', '', false, :class => "select-all-user" %></th>
+                	<th>Remove all &nbsp; <%= check_box_tag 'user_id[]', '', false, :class => "select-all" %></th>
                     <th>First Name</th>
                     <th>Last Name</th>
                     <th>Email</th>
@@ -49,7 +49,7 @@
               <tbody>
 				 <% @users.each do |user| %>
                   <tr class="odd gradeX">
-                 	  <td class=""><%= check_box_tag 'user_ids[]', user.id, false, :class => "user-check-box" %></td>
+                 	  <td class=""><%= check_box_tag 'user_ids[]', user.id, false, :class => "check-box" %></td>
                       <td class=""><%= user.first_name %></td>
                       <td class=""><%= user.last_name %></td>
                       <td class="center "><%= user.email %></td>
@@ -99,7 +99,7 @@
 		    <%= paginate @users %>
 	</div>
  </div>		  
-<% end %>
+<%#= end %>
 
 
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -172,7 +172,7 @@
 	{
 	    showHideMenu('li_webadmin');	
 	}
-	else if(<%= @role_id.name.eql?('School Admin')%>)
+	else if(<%= @role_id.name.eql?('School Admin')%> || <%= @role_id.name.eql?('Teacher')%> || <%= @role_id.name.eql?('Student')%>)
 	{
 	    showHideMenu('li_school');	
 	}
